--- a/index.html
+++ b/index.html
@@ -1,73 +1,173 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Be My Valentine 💘</title>
-  <style>
-    body {
-      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-      font-family: Arial, sans-serif;
-      text-align: center;
-      height: 100vh;
-      margin: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+<meta charset="UTF-8">
+<title>For Chinnu 💙💗</title>
 
-    .card {
-      background: white;
-      padding: 30px;
-      border-radius: 20px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
-    }
+<style>
+body {
+  margin: 0;
+  height: 100vh;
+  background: linear-gradient(135deg, #0b132b, #1c2541, #ff4d8d);
+  font-family: 'Segoe UI', sans-serif;
+  overflow: hidden;
+  color: white;
+}
 
-    h1 {
-      color: #ff4d6d;
-    }
+.container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 30px;
+}
 
-    button {
-      padding: 12px 20px;
-      font-size: 16px;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      margin: 10px;
-    }
+h1 {
+  font-size: 3.2rem;
+  color: #ffd6ea;
+}
 
-    #yes {
-      background-color: #ff4d6d;
-      color: white;
-    }
+h2 {
+  font-size: 1.6rem;
+  color: #9fd3ff;
+  max-width: 800px;
+}
 
-    #no {
-      background-color: #ccc;
-      position: relative;
-    }
-  </style>
+.buttons {
+  margin-top: 30px;
+}
+
+button {
+  padding: 15px 35px;
+  font-size: 1.2rem;
+  border: none;
+  border-radius: 40px;
+  cursor: pointer;
+  margin: 10px;
+}
+
+#yes {
+  background: #ff4d8d;
+  color: white;
+  box-shadow: 0 0 20px #ff4d8d;
+}
+
+#no {
+  background: #243b6b;
+  color: white;
+  position: relative;
+}
+
+#message {
+  margin-top: 40px;
+  font-size: 1.3rem;
+  max-width: 850px;
+  line-height: 1.8;
+  color: #ffe6f2;
+  min-height: 160px;
+}
+
+/* Floating hearts */
+.heart {
+  position: absolute;
+  bottom: -20px;
+  font-size: 22px;
+  animation: float 7s linear infinite;
+}
+
+@keyframes float {
+  0% { transform: translateY(0); opacity: 1; }
+  100% { transform: translateY(-110vh); opacity: 0; }
+}
+</style>
 </head>
+
 <body>
 
-  <div class="card">
-    <h1>Will you be my Valentine? 💖</h1>
-    <button id="yes" onclick="yesClicked()">Yes 💘</button>
+<!-- Background Music -->
+<audio id="music" loop>
+  <source src="https://www.bensound.com/bensound-music/bensound-love.mp3" type="audio/mpeg">
+</audio>
+
+<div class="container">
+  <h1>Will you be my Valentine, Chinnu? 💙💗</h1>
+
+  <h2>
+    I didn’t build this page just to ask a question…  
+    I built it because my heart already knows the answer ✨
+  </h2>
+
+  <div class="buttons">
+    <button id="yes" onclick="yesClicked()">Yes 💖</button>
     <button id="no" onmouseover="moveNo()">No 🙈</button>
-    <p id="message"></p>
   </div>
 
-  <script>
-    function yesClicked() {
-      document.getElementById("message").innerHTML =
-        "Yayyy! 💕 I knew you’d say yes 😍";
-    }
+  <div id="message"></div>
+</div>
 
-    function moveNo() {
-      const noBtn = document.getElementById("no");
-      const x = Math.random() * 200 - 100;
-      const y = Math.random() * 200 - 100;
-      noBtn.style.transform = `translate(${x}px, ${y}px)`;
-    }
-  </script>
+<script>
+const poem = `
+I knew it, Chinnu 💕  
+I knew your smile would choose me before your words did.
+
+In a world that rushes, you slow me down.  
+In days that feel heavy, you feel like home.
+
+If love had a name,  
+If comfort had a face,  
+If forever had a feeling —  
+it would quietly look like you.
+
+This Valentine’s Day isn’t just a day for me.  
+It’s the beginning of all my favourite tomorrows…  
+with you 💙💗
+`;
+
+let index = 0;
+
+function yesClicked() {
+  document.getElementById("music").play();
+  document.getElementById("message").innerHTML = "";
+  index = 0;
+  typePoem();
+
+  // WhatsApp message
+  setTimeout(() => {
+    window.open(
+      "https://wa.me/?text=I%20said%20YES%20💙💗%20Happy%20Valentine’s%20Day!",
+      "_blank"
+    );
+  }, 6000);
+}
+
+function typePoem() {
+  if (index < poem.length) {
+    document.getElementById("message").innerHTML += poem.charAt(index);
+    index++;
+    setTimeout(typePoem, 40);
+  }
+}
+
+function moveNo() {
+  const noBtn = document.getElementById("no");
+  const x = Math.random() * 320 - 160;
+  const y = Math.random() * 320 - 160;
+  noBtn.style.transform = `translate(${x}px, ${y}px)`;
+}
+
+/* Hearts generator */
+setInterval(() => {
+  const heart = document.createElement("div");
+  heart.className = "heart";
+  heart.innerHTML = Math.random() > 0.5 ? "💗" : "💙";
+  heart.style.left = Math.random() * 100 + "vw";
+  heart.style.fontSize = Math.random() * 25 + 15 + "px";
+  document.body.appendChild(heart);
+  setTimeout(() => heart.remove(), 7000);
+}, 350);
+</script>
 
 </body>
 </html>
